fix: change CardDashs_container display to inline and remove gap for layout adjustment

--- a/ppe-front/src/pages/Admin/Dashboard/styles.module.css
+++ b/ppe-front/src/pages/Admin/Dashboard/styles.module.css
@@ -48,7 +48,8 @@ body {
 }
 
 .container_desenpenho .CardDashs_container {
-  display: inline;
+  display: flex;
+  flex-direction: row;
   gap: 8px;
 }
 
